fixed alignment of top section

--- a/css/index.css
+++ b/css/index.css
@@ -200,6 +200,12 @@ header .head nav a {
 .home .topSection {
   border-bottom: 1px dashed gray;
 }
+.home .topSection h2 {
+  padding: 1rem 0rem;
+}
+.home .topSection p {
+  padding-bottom: 1rem;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
