--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,14 @@
 
   .topSection {
     border-bottom: 1px dashed gray;
+
+    h2 {
+      padding: 1rem 0rem;
+    }
+
+    p {
+      padding-bottom: 1rem;
+    }
   }
 
   .content-section {
